crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__if_const_statement.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_stmt(\"if const (a) { b; }\")"
---
IfStmt const
  a
  Block
    ExprStmt
      b
