crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__if_else_statement.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_stmt(\"if (a) { b; } else { c; }\")"
---
IfStmt
  a
  Block
    ExprStmt
      b
  Block
    ExprStmt
      c
