crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__if_without_else.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"if (a) { b; }\", Parser::parse_statement)"
---
IfStmt
  a
  Block
    ExprStmt
      b
