crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__index_and_field_postfix.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_expr(\"x.left[3]\")"
---
Index
  Field "left"
    x
  3
