crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__let_and_var_statements.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"let x = 1; var y;\", Parser::parse_statement)"
---
LetStmt "x"
  1
