crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__loop_with_unbraced_body.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_stmt(\"void main() { loop advance(); }\")"
---
FunctionDecl "main"
  TypeName "void"
  Block
    LoopStmt
      ExprStmt
        Call
          advance
