crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__multiple_specialisation_params_of_different_kinds.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_stmt(\"processor P (using T, int length = 4) { output stream int out; }\")"
---
ProcessorDecl "P"
  SpecialisationParam using "T"
  SpecialisationParam value "length"
    TypeName "int"
    4
  EndpointGroup output stream
    EndpointDecl "out"
      TypeName "int"
