crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__named_type.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_type(\"MyStruct\")"
---
TypeName "MyStruct"
