crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__namespace_with_specialisation_params.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"namespace n (processor p, namespace ns) {}\", Parser::parse_statement)"
---
NamespaceDecl "n"
  SpecialisationParam processor "p"
  SpecialisationParam namespace "ns"
