crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__output_write_operator.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"out <- in * gain;\", Parser::parse_statement)"
---
ExprStmt
  Assign "<-"
    out
    Binary "*"
      in
      gain
